@startuml

title __COMMAND's Class Diagram__\n

  namespace org.example {
    namespace behavioral.command {
      interface org.example.behavioral.command.Command {
          {abstract} + execute()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.command {
      class org.example.behavioral.command.CreditCard {
          + activate()
          + desactivate()
          + sendPinNumberToCustomer()
          + sendSMSToCustomerActivate()
          + sendSMSToCustomerDesactivate()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.command {
      class org.example.behavioral.command.CreditCardActivateCommand {
          + CreditCardActivateCommand()
          + execute()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.command {
      class org.example.behavioral.command.CreditCardDesactivateCommand {
          + CreditCardDesactivateCommand()
          + execute()
      }
    }
  }
  

  namespace org.example {
    namespace behavioral.command {
      class org.example.behavioral.command.CreditCardInvoker {
          + CreditCardInvoker()
          + run()
          + setCommand()
      }
    }
  }
  

  org.example.behavioral.command.CreditCardActivateCommand .up.|> org.example.behavioral.command.Command
  org.example.behavioral.command.CreditCardActivateCommand o-- org.example.behavioral.command.CreditCard : creditCard
  org.example.behavioral.command.CreditCardDesactivateCommand .up.|> org.example.behavioral.command.Command
  org.example.behavioral.command.CreditCardDesactivateCommand o-- org.example.behavioral.command.CreditCard : creditCard
  org.example.behavioral.command.CreditCardInvoker o-- org.example.behavioral.command.Command : command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
